yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rick-and-morty-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rick-and-morty
  template:
    metadata:
      labels:
        app: rick-and-morty
    spec:
      containers:
        - name: rick-and-morty-container
          image: roei2212/rick-and-morty-api:1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
