yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-and-morty-service
spec:
  type: NodePort
  selector:
    app: rick-and-morty
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
